fixed alignment

--- a/src/app/components/recipe/recipe-list/recipe-item/recipe-item.component.css
+++ b/src/app/components/recipe/recipe-list/recipe-item/recipe-item.component.css
@@ -4,6 +4,7 @@
     border-radius: 0.5em;
     width: 25rem;
     height: auto;
+    align-self: center;
     /* height: 40rem; */
 }
 
